# writer

./: .gitignore  .oxlintrc.json  CHANGELOG.md  Cargo.toml  README.md  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  nlp.rs
crates/core/src/atproto/: auth.rs  leaflet.rs  mod.rs  standard_site.rs  strings.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: diagnostics.rs  lib.rs  parser.rs  transformer.rs  utils.rs
crates/store/: Cargo.toml
crates/store/assets/: README_TEMPLATE.md
crates/store/src/: file_utils.rs  lib.rs  settings.rs  text_utils.rs
docs/: architecture.md  at-proto.md  export.md  lifecycle.md  nlp.md  parking-lot.md  pdf.md  persistence.md  release.md  roadmap.md  spec.md  state.md  validate.md
docs/integration/: gh.md
docs/specs/: archives-trash.md  at-proto.md  image-handling.md
docs/tasks/: archives-trash.md  gh.md  image-handling.md  lib.md  parking-lot.md  standard-site.md  syntax-extensions.md  tangled.md
fixtures/markdown/: basic.html  basic.md  basic.outline.json  frontmatter-toml.md  frontmatter-yaml.md  style-check-sample.md
fixtures/markdown/sample/: history-of-donkey-kong.md  react-basics.md  rust-borrowing.md
fixtures/render/: xss-safety.html  xss-safety.md
src/: App.css  App.tsx  Router.tsx  constants.ts  dnd.ts  logger.ts  main.tsx  ports.ts  types.ts  usePorts.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  commands.rs  lib.rs  locations.rs  main.rs
src-tauri/src/atproto/: auth.rs  mod.rs  strings.rs
src-tauri/src/commands/: atproto.rs  md.rs  standard_site.rs  strings.rs
src/__tests__/: AppHeaderBar.test.tsx  BottomSheet.test.tsx  ContextMenu.test.tsx  DiagnosticsPanel.test.tsx  DocumentItem.test.tsx  DocumentOperationDialog.test.tsx  Editor.test.tsx  ExportDialog.test.tsx  HelpSheet.test.tsx  LayoutSettingsRoute.test.tsx  PdfPreview.test.tsx  QuickCaptureForm.test.tsx  Sidebar.test.tsx  SidebarLocationItem.test.tsx  Support.test.tsx  Toolbar.test.tsx  Tooltip.test.tsx  TreeItem.test.tsx  Version.test.tsx  WorkspacePanel.test.tsx  appStore.test.ts  dnd.test.ts  focus-dimming.test.ts  helpers.test.ts  panel-selectors.test.ts  pattern-matcher.test.ts  pdfFonts.test.ts  ports.test.ts  pos-highlighting.test.ts  searchAtoms.test.ts  selectors.test.ts  setup.ts  shortcuts-store.test.ts  style-check.test.ts  typewriter-scroll.test.ts  useAtProtoController.test.tsx  useBackendEvents.test.tsx  useDocumentActions.test.ts  useDocumentSessionEffects.test.tsx  useDocxExport.test.tsx  (+17 more)
src/__tests__/stores/: app.test.ts  search.test.ts
src/components/: Button.tsx  CollapsibleSection.tsx  Dialog.tsx  DocumentTabs.tsx  Editor.tsx  Preview.tsx  SearchPanel.tsx  Sidebar.tsx  StatusBar.tsx  Support.tsx  Switch.tsx  Toaster.tsx  Toolbar.tsx  Tooltip.tsx  Version.tsx  file-icon.tsx  icons.tsx
src/components/AppLayout/: AppHeaderBar.tsx  BackendAlerts.tsx  DiagnosticsPanel.tsx  FocusModePanel.tsx  SearchOverlay.tsx  WelcomeScreen.tsx  WorkspacePanel.tsx
src/components/AtProto/: AtProtoAuthSheet.tsx  ImportSheet.tsx  PublishSheet.tsx
src/components/ContextMenu/: ContextMenu.tsx  index.ts
src/components/Sheet/: Sheet.tsx  (+1 more)
src/data/: style-dictionaries.json
src/dnd/: index.ts  sidebar.ts
src/editor/: constants.ts  focus-dimming.ts  pattern-matcher.ts  pos-highlighting.ts  style-check.ts  types.ts  typewriter-scroll.ts
src/hooks/: useBackendEvents.ts  useCmdLoop.ts  useDocumentActions.ts  useDocxExport.tsx  useEditor.ts  useEditorBridge.ts  useExternalDropHandler.ts  useHelpSheetHotkey.ts  useLayoutHotkeys.ts  useMotion.ts  usePdfExport.tsx  usePreview.ts  useResizable.ts  useRoutedSheet.ts  useSearchController.ts  useShortcutRegistry.ts  useTextExport.tsx  useTypingActivity.ts  useViewportTier.ts  useWorkspaceController.ts  useWorkspaceSync.ts
src/pdf/: constants.ts  errors.ts  fonts.ts  types.ts
src/ports/: commands.ts  index.ts  invoke.ts  types.ts
src/routes/: AppRouter.tsx
src/state/: appStore.ts  helpers.ts  panel-selectors.ts  searchAtoms.ts  selectors.ts  types.ts
src/styles/: fonts.css
src/test/: setup.ts
src/themes/: oxocarbon-dark.ts  oxocarbon-light.ts
src/utils/: date.ts  paths.ts  serialize.ts  shortcuts.ts  text.ts
www/: .markdownlint.json  build.js  dev.js  jsconfig.json  package.json  wrangler.json
(+121 files in other folders)
