[package]
name = "writer"
version = "0.2.0"
description = "A Tauri App"
authors = ["Owais J."]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
chrono = "0.4"
log = "0.4"
async-trait = "0.1"
thiserror = "2"
comrak = "0.50"
reqwest = "0.12"
unicode-segmentation = "1"

writer-core = { path = "../crates/core" }
writer-md = { path = "../crates/markdown" }
writer-store = { path = "../crates/store" }

[dev-dependencies]
tempfile = "3.27"
