[package]
name = "writer-core"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
aho-corasick = "1.1.4"
serde_json = "1"
jacquard = "0.10"
unicode-segmentation = "1.12.0"
comrak = "0.50"
reqwest = "0.12"
log = "0.4"

[dev-dependencies]
tempfile = "3.27"
