[package]
name = "writer-store"
version = "0.1.0"
edition = "2024"

[dependencies]
writer-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "serde_json"] }
dirs = "6"
tracing = "0.1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
