[package]
name = "writer-store"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "serde_json"] }
dirs = "6"
tempfile = "3"
log = "0.4"

writer-core = { path = "../core" }
writer-md = { path = "../markdown" }

[dev-dependencies]
tempfile = "3"
